--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,15 +30,15 @@ jobs:
           node-version: 22
           registry-url: https://registry.npmjs.org
 
-      - name: Upgrade npm for Trusted Publishing support
-        run: npm install -g npm@latest
+      # npm 11.5+ has native OIDC Trusted Publishing support
+      - name: Upgrade npm for OIDC support
+        run: npm install -g npm@latest && npm --version
 
       - name: Set version from tag
         run: |
           VERSION="${GITHUB_REF_NAME#v}"
           npm version "$VERSION" --no-git-tag-version --allow-same-version
 
-      - name: Publish with provenance
+      # No NPM_TOKEN needed — OIDC handles auth automatically
+      - name: Publish with provenance (OIDC)
         run: npm publish --provenance --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
